fixing bugs on IE

--- a/src/styles/layout/_header.less
+++ b/src/styles/layout/_header.less
@@ -81,8 +81,8 @@
         }
         .img {
           padding-right: 20px;
-          max-width: 25%;
-          width: 100%;
+          max-width: 100%;
+          //width: 100%;
           display: block;
           @media (min-width: @xxl) {
             padding-right: 45px;
@@ -114,13 +114,13 @@
 
 .desktop-navbar {
   display: none;
-  @media (min-width: @lg) {
+  @media (min-width: @xxl) {
     display: block;
   }
 }
 
 .mobile-navbar {
-  @media (min-width: @lg) {
+  @media (min-width: @xxl) {
     display: none;
   }
   .mobile-menu {
